# DrivingApp

./: .dockerignore  .gitignore  README.md  \  analysis_options.yaml  docker-compose.yml  flutter_rust_bridge.yaml  justfile  melos.yaml  pubspec.yaml  shell.nix  todo.md
rust/: Cargo.toml  scratch.rs
rust/src/: frb_generated.rs  lib.rs
rust/src/api/: driver_api.rs  fare_api.rs  map_api.rs  mod.rs
rust/src/application/: fare_engine.rs  map_api.rs  mod.rs
rust/src/core/: models.rs
rust/src/domain/: models.rs
rust/src/dto/: mapbox_dto.rs  mod.rs
rust/src/infrastructure/: mapbox.rs  mapbox_client.rs  mod.rs
rust/src/models/: driver_models.rs  fare_models.rs  map_models.rs  mod.rs  route_models.rs
rust/src/services/: driver_service.rs  fare_service.rs  heatmap_service.rs  mapbox.rs  mod.rs  route_service.rs
rust/src/utils/: math.rs
server/: Cargo.toml
server/api-gateway/: Cargo.toml  Dockerfile  package.json  tsconfig.json
server/api-gateway/src/: index.ts  main.rs
server/api-gateway/tests/: gateway.test.ts
server/auth-service/: Dockerfile  package-lock.json  package.json  tsconfig.json
server/auth-service/src/: index.ts
server/auth-service/tests/: auth.test.ts  forgot_password.test.ts  health.test.ts  signin.test.ts  signup.test.ts
server/bidding-service/: Cargo.toml  Dockerfile  package.json
server/bidding-service/prisma/: schema.prisma
server/bidding-service/src/: db.ts  index.ts  main.rs
server/billing/: Cargo.toml
server/billing/src/: main.rs
server/chat-service/: Dockerfile  package.json
server/driver/: Cargo.toml
server/driver-service/: Cargo.toml  Dockerfile  clear_db.ts  package.json  register_test_driver.ts
server/fare/: Cargo.toml
server/fare-service/: drizzle.config.ts  package.json  tsconfig.json
server/gateway/: Cargo.toml
server/location/: Cargo.toml
server/passenger/: Cargo.toml
server/passenger-service/: Cargo.toml  Dockerfile  drizzle.config.ts  package.json
server/telemetry-service/: Cargo.toml  Dockerfile  package.json
server/trip/: Cargo.toml
server/trip-service/: Cargo.toml  Dockerfile  package.json  tsconfig.json
(+878 files in other folders)
