[workspace]
resolver = "2"
members = [
    "gateway",
    "passenger",
    "driver",
    "trip",
    "billing",
    "location",
    "libs/common",
    "libs/protocols",
]

[workspace.dependencies]
tokio = { version = "1.38", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1"
