[workspace]
resolver = "2"
members = [
    "api-gateway",
    "passenger-service",
    "driver-service",
    "trip-service",
    "bidding-service",
    "telemetry-service",
    "shared-core/common",
    "shared-core/protocols",
]

[workspace.dependencies]
tokio = { version = "1.38", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1"
