[package]
name = "passenger-service"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
common = { path = "../shared-core/common" }
protocols = { path = "../shared-core/protocols" }
axum = { version = "0.7", features = ["macros"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono"] }
uuid = { version = "1.8", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing-subscriber = "0.3"
async-trait = "0.1"
bcrypt = "0.15"
jsonwebtoken = "9.3"
